Updated composer json

--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
               "RLWebdiensten\\LaravelInformerOnline\\InformerOnlineServiceProvider"
             ],
             "aliases": {
-                "RLWebdiensten\\LaravelInformerOnline\\LaravelInformerOnline": "InformerOnline"
+                "RLWebdiensten\\LaravelInformerOnline\\InformerOnline": "InformerOnline"
             }
         }
     },
