--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php": "^8.0",
         "guzzlehttp/guzzle": "^7.4",
         "illuminate/contracts": "^8.0|^9.0",
+        "spatie/enum": "^3.13",
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
